more chats on refresh. minor fixes.

--- a/www/index.html
+++ b/www/index.html
@@ -27,10 +27,10 @@
             <ion-nav-bar class="bar-positive">
                 <ion-nav-back-button></ion-nav-back-button>
                 <ion-nav-buttons side="left">
-                    <button menu-toggle="left" class="button button-icon icon ion-navicon" ng-click="toggleLeftSideMenu()"></button>
+                    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
                 </ion-nav-buttons>
                 <ion-nav-buttons side="right">
-                    <button menu-toggle="right" class="button button-icon icon ion-android-more-vertical" ng-click="showActionsMenu($event)"></button>
+                    <button class="button button-icon icon ion-android-more-vertical" ng-click="showActionsMenu($event)"></button>
                 </ion-nav-buttons>
             </ion-nav-bar>
             <!--
